Virtuelle IP-Adresse konfigurierbar
Damit mehrere Boxen im Standalone-Betrieb auf das selbe EVU-Modul zugreifen können. Ansonsten gibt es einen IP-Adress-Konflikt

--- a/openwb.conf
+++ b/openwb.conf
@@ -260,3 +260,5 @@ powerfoxpass=''
 powerfoxid=deviceid
 wizzarddone=0
 datenschutzack=0
+virtual_ip_eth0_evu=192.168.193.7
+virtual_ip_wlan0_evu=192.168.193.8
