--- a/openwb.conf
+++ b/openwb.conf
@@ -260,5 +260,5 @@ powerfoxpass=''
 powerfoxid=deviceid
 wizzarddone=0
 datenschutzack=0
-virtual_ip_eth0_evu=192.168.193.7
-virtual_ip_wlan0_evu=192.168.193.8
+virtual_ip_eth0=192.168.193.7
+virtual_ip_wlan0=192.168.193.8
