--- a/openwb.conf
+++ b/openwb.conf
@@ -260,3 +260,5 @@ powerfoxpass=''
 powerfoxid=deviceid
 wizzarddone=0
 datenschutzack=0
+virtual_ip_eth0='192.168.193.5'
+virtual_ip_wlan0='192.168.193.6'
