--- a/web/files/mosquitto.conf
+++ b/web/files/mosquitto.conf
@@ -4,6 +4,8 @@ listener 1883
 protocol mqtt
 listener 1884
 protocol websockets
+# newer mosquitto versions block unauthorized access by default
+allow_anonymous true
 # prevent too many inactive connections from buggy clients
 # closes inactive connections after 4 hours
 persistent_client_expiration 4h
