--- a/openwb.conf
+++ b/openwb.conf
@@ -262,3 +262,11 @@ wizzarddone=0
 datenschutzack=0
 virtual_ip_eth0='192.168.193.5'
 virtual_ip_wlan0='192.168.193.6'
+aiwaysuser=''
+aiwayspass=''
+aiwaysvin=''
+aiwaysintervall=''
+aiwayslp2user=''
+aiwayslp2pass=''
+aiwayslp2vin=''
+aiwayslp2intervall=''
