--- a/openwb.conf
+++ b/openwb.conf
@@ -262,11 +262,11 @@ wizzarddone=0
 datenschutzack=0
 virtual_ip_eth0='192.168.193.5'
 virtual_ip_wlan0='192.168.193.6'
-aiwaysuser=''
-aiwayspass=''
-aiwaysvin=''
-aiwaysintervall=''
-aiwayslp2user=''
-aiwayslp2pass=''
-aiwayslp2vin=''
-aiwayslp2intervall=''
+soc_aiways_user=''
+soc_aiways_pass=''
+soc_aiways_vin=''
+soc_aiways_intervall=''
+soc_aiwayslp2_user=''
+soc_aiwayslp2_pass=''
+soc_aiwayslp2_vin=''
+soc_aiwayslp2_intervall=''
