cleanup soc modules for lp2

--- a/openwb.conf
+++ b/openwb.conf
@@ -62,7 +62,7 @@ smaemdllid=1900123456
 dacregisters1=12
 dacregisters2=12
 wr_http_w_url='http://10.20.0.63/haus/ramdisk/pvwatt'
-socmodul1=soc_http1
+socmodul1=soc_httplp2
 wr_http_kwh_url='http://10.20.0.63/haus/ramdisk/pvewh'
 bezug_http_w_url='http://192.168.0.17/bezugwatt.txt'
 bezug_http_ikwh_url='http://192.168.0.17/bezugwh.txt'
