--- a/.github/workflows/github-actions-python.yml
+++ b/.github/workflows/github-actions-python.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest paho-mqtt requests-mock
+          pip install flake8 pytest paho-mqtt requests-mock jq
       - name: Flake8 with annotations
         uses: TrueBrain/actions-flake8@v2.1
         with:
