fix old stable branch comparison

--- a/openwb.conf
+++ b/openwb.conf
@@ -159,7 +159,7 @@ soc_tesla_username=deine@email.com
 soc_tesla_password=''
 soc_tesla_intervall=15
 soc_tesla_intervallladen=10
-releasetrain=Stable
+releasetrain=stable
 lllaniplp2=10.20.0.180
 solaredgeip='192.168.0.10'
 solaredgepvip='192.168.0.10'
